# fitness-tracker

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 24dc40969cf7_extend_exercise_templates_metadata.py  6a0e2fa6410c_create_users.py  8a4b78f27bb5_add_workout_plans.py  a10dd679679e_add_exercise_templates_and_exercises.py  ced7179703aa_add_workouts_and_workout_sets.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  exercise_templates.py  exercises.py  progress.py  workout_plans.py  workouts.py
app/api/schemas/: auth.py  exercise.py  exercise_template.py  login.py  plan_reorder.py  progress.py  progress_history.py  progress_overview.py  workout.py  workout_plan.py
app/core/: config.py  security.py  tokens.py
app/models/: __init__.py  exercise.py  exercise_template.py  user.py  workout.py  workout_plan.py  workout_plan_item.py  workout_set.py
scripts/: seed_exercise_templates.py
